# OpenCut

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml
.cursor/commands/: review.md
.cursor/rules/: ultracite.mdc
apps/desktop/: Cargo.toml
apps/desktop/locales/: en.yaml  zh-CN.yaml
apps/desktop/src/: locale.rs  main.rs
apps/web/: next.config.ts  package.json
apps/web/messages/: en.json  zh.json
apps/web/scripts/: download-pexels-template-assets.mjs
apps/web/src/: middleware.ts
apps/web/src/app/[locale]/: layout.tsx  page.tsx
apps/web/src/app/projects/: page.tsx
apps/web/src/components/: footer.tsx  gitHub-contribute-section.tsx  header.tsx  theme-toggle.tsx
apps/web/src/components/editor/: editor-header.tsx  export-button.tsx  language-switcher.tsx  mobile-gate.tsx
apps/web/src/components/landing/: hero.tsx
apps/web/src/components/providers/: editor-provider.tsx
apps/web/src/components/templates/: save-template-dialog.tsx  template-browser.tsx  template-library-dialog.tsx
apps/web/src/core/managers/: media-manager.ts  project-manager.ts  renderer-manager.ts  scenes-manager.ts  timeline-manager.ts
apps/web/src/hooks/actions/: use-editor-actions.ts
apps/web/src/i18n/: request.ts  routing.ts
apps/web/src/lib/: quick-cut.ts
apps/web/src/stores/: assets-panel-store.tsx  dubbing-config-store.ts
apps/web/src/types/: animation.ts  next-intl.d.ts  timeline.ts
rust/crates/effects/src/: pipeline.rs
rust/crates/templates/: Cargo.toml
rust/crates/templates/src/: lib.rs
rust/wasm/: Cargo.toml
rust/wasm/src/: templates.rs  wasm.rs
(+143 files in other folders)
