[package]
name = "templates"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"
crate-type = ["rlib"]

[dependencies]
bridge = { version = "0.1.0", path = "../bridge" }
js-sys = { version = "0.3.93", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tsify-next = { version = "0.5", optional = true }
uuid = { version = "1.18.1", features = ["v4", "serde", "js"] }
wasm-bindgen = { version = "0.2.116", optional = true }

[features]
wasm = ["dep:wasm-bindgen", "dep:tsify-next", "dep:js-sys", "tsify-next/js"]
